--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -287,6 +287,10 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
   .blog_show {padding:30px 0 0 0;}
   .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
+  .bookings .personal, .bookings .passport, .bookings .flights, .bookings .insurance, .bookings .requests, .bookings .emergency, .bookings .acceptance {padding:15px 5px!important;}
+  .bookings form .dont_get_newsletters_field label, .bookings form .certify_personal_insurance_field label, .bookings form .i_accept_field label {width:90%!important;}
+  .bookings .passport .fields label, .bookings .flights .fields label {width:100%!important;}
+  .bookings .passport .fields .arrival, .bookings .passport .fields .departure, .bookings .flights .fields .arrival, .bookings .flights .fields .departure {width:100%!important;}
 }
 
 /*** sm ***/
