--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -159,6 +159,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h2 { margin-bottom:30px;}
   img.flags {margin:50px auto 0 auto;}
   img.logo {display:block; margin:50px auto 80px auto;}
+  img.logos {display:block; margin:10px auto 0 auto;}
   span, a {color:#ffffff; font-size:8px; font-size:8px; text-transform:uppercase;}
 }
 
