title on location banner change

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -6,7 +6,9 @@
         <div class="overlay"></div>        
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2>Discover</h2>
+          <% if @location.depth == 0 %>
+            <h2>Discover</h2>
+          <% end %>
           <h1><%= @location.name %></h1>
           <h3><%= @location.sub_name %></h3>
         </div>
