--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,8 +53,12 @@ nav {position: fixed; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 1
     a, a:hover, a:focus {color:#ffffff;}
     h2 {@include header_font(); font-size:16px; margin:0; padding:25px 0;}
     h2 span { color: #ffffff; cursor: pointer;}
-    .location_nav {font-size:14px; line-height:36px; text-align:left;
+    .location_nav {font-size:14px; line-height:36px; text-align:left;width: 600px;margin-left: 80px;
       img {margin-right:15px;}
+    }
+    .location_nav li {
+      float: left;
+      width: 200px;
     }
   }
 }
