--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,6 +64,13 @@ nav {position: fixed; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 1
 }
 nav:before { content: ''; display: inline-block; height: 100%; vertical-align: middle;  margin-right: -0.25em;}
 
+.footer_location_nav{list-style: none; margin: 0; padding: 0;
+  li{
+    text-align: center;
+    float: left;
+  }
+}
+
 .nav-hide {display: none;}
 
 .navbar-hamburger { position: fixed; top: 20px; right: 20px; width: 30px; height: 22px; z-index: 20; cursor: pointer;
