--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,7 +64,7 @@ nav {position: fixed; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 1
 }
 nav:before { content: ''; display: inline-block; height: 100%; vertical-align: middle;  margin-right: -0.25em;}
 
-.footer_location_nav{list-style: none; margin: 0; padding: 0;
+.footer_location_nav{list-style: none;
   li{
     text-align: center;
     float: left;
