--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -161,6 +161,9 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 #countries {background: url("/assets/bg-countries.jpg") top center no-repeat;
   .content-container {height: 495px;}
+  ul {text-align:center; width:100%; padding:0;
+    li {margin:0 5px; display:inline-block; float:none; padding:0;}
+  }
 }
 
 #footer {background: url("/assets/bg-footer.jpg") top center no-repeat; height:450px;
