--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,13 +64,6 @@ nav {position: fixed; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 1
 }
 nav:before { content: ''; display: inline-block; height: 100%; vertical-align: middle;  margin-right: -0.25em;}
 
-.footer_location_nav{list-style: none;
-  li{
-    text-align: center;
-    float: left;
-  }
-}
-
 .nav-hide {display: none;}
 
 .navbar-hamburger { position: fixed; top: 20px; right: 20px; width: 30px; height: 22px; z-index: 20; cursor: pointer;
@@ -162,7 +155,9 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 #countries {background: url("/assets/bg-countries.jpg") top center no-repeat;
   .content-container {height: 495px;}
   ul {text-align:center; width:100%; padding:0;
-    li {margin:0 5px; display:inline-block; float:none; padding:0;}
+    li {margin:0 5px; display:inline-block; padding:0;
+      span {display:inline-block; width:10px; overflow:hidden;}
+    }
   }
 }
 
