--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -155,7 +155,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 #countries {background: url("/assets/bg-countries.jpg") top center no-repeat;
   .content-container {height: 495px;}
   ul {text-align:center; width:100%; padding:0;
-    li {margin:0 5px; display:inline-block; padding:0;
+    li {display:inline-block; padding:0;
       span {display:inline-block; width:55px; overflow:hidden;}
     }
   }
