--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,15 +51,12 @@ nav {position: fixed; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 1
     li.first {padding-top:25px;}
     li.parent {line-height:0;}
     a, a:hover, a:focus {color:#ffffff;}
-    h2 {@include header_font(); font-size:16px; margin:0; padding:25px 0;}
+    h2 {margin:0; padding:25px 0;}
     h2 span { color: #ffffff; cursor: pointer;}
-    .location_nav {font-size:14px; line-height:36px; text-align:left;width: 600px;margin-left: 80px;
+    .location_nav {line-height:36px; text-align:left; width: 740px; margin-left: 80px; height:0; transition:height 0.5s; overflow: hidden;
       img {margin-right:15px;}
     }
-    .location_nav li {
-      float: left;
-      width: 200px;
-    }
+    .location_nav.open {height:215px; -webkit-column-count: 4; -moz-column-count: 4; column-count: 4;}
   }
 }
 nav:before { content: ''; display: inline-block; height: 100%; vertical-align: middle;  margin-right: -0.25em;}
@@ -86,7 +83,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 #masterslider,#post_masterslider {
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url("../assets/overlay.png") repeat;}
   .banner-overlay {position:absolute; z-index:10;  bottom:0; left: 50%; margin-left: -960px;
-    img {width:100%; position: relative;}
+    img {position: relative;}
   }
   .banner-overlay::before, .banner-overlay::after {content: ''; position: absolute; width: 100%; background-color: #fff; left: -100%; bottom: 0; height: 30px;}
   .banner-overlay::after {left: auto; right: -100%;}
@@ -168,7 +165,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 .content-container .content {@include vertical-align(); color:#ffffff;
   h1,h2 {width:740px; color:#ffffff; margin:0 auto 50px auto;}
   h2 { margin-bottom:30px;}
-  img.flags {margin:50px auto 0 auto;}
   img.logo {display:block; margin:50px auto 80px auto;}
   img.logos {display:block; margin:10px auto 0 auto;}
   span, a {color:#ffffff; font-size:8px; font-size:8px; text-transform:uppercase;}
@@ -340,8 +336,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .container {width: 1170px;}
 }
 
-.location_nav {height:0; transition:height 0.5s; overflow: hidden;}
-.location_nav.open {height:215px;}
+
 
 .modal-dialog {width:940px;
   .modal-content {border-radius:0; box-shadow: none;
