--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -9,9 +9,10 @@
         </div>
         <div class="contact-form">
           <h2>Fill in the form below and we'll get back to you asap</h2>
+          
           <% @inquiry ||= ::Refinery::Inquiries::Inquiry.new %>
           <%= simple_form_for [refinery, :inquiries, @inquiry], :html => {:class => 'form-vertical'} do |f| %>
-            <div class="col-xs-12 col-sm-6">
+            <div class="row"><div class="col-xs-12 col-sm-6">
               <%= f.input :name, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
               <%= f.input :email, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' }%>
               <%= f.input :phone, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
@@ -27,9 +28,9 @@
             </div>
             <div class="col-xs-12">
               <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
-            </div>
+            </div></div>
           <% end %>
-          <div class="clear"></div>
+            
           <div class="contact-details">
             <% email = copywriting('Email', {:phrase_type => 'string', :scope => 'Footer', :default => 'info@tailormadeafrica.com' }) %>
             <a href="mailto:<%= email %>"><i class="fa fa-envelope fa-2x"></i><h3><%= email %></h3></a>
