--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -278,14 +278,15 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h3 {line-height:24px; margin:30px 0;}
   .div1,.div2,.div3 {opacity:1;}
   h1,h2,p,ul {width:100%!important;}
-  #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0;}
+  #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0!important;}
   .content-container .content h1, .content-container .content h2 {margin:30px 0;}
-  #people { background: #489AF0;}
+  #people { background: #489AF0; padding-bottom:30px!important;}
   #people .street-child,form { width:100%!important; padding:0!important;}
   #people .street-child img {float:none!important; margin:0 auto 30px auto!important;}
   #countries {background: #000000;}
   #countries .content-container{ height: auto;}
   #countries .content-container .content {transform: none;}
+  #countries ul li span {width:56px;}
   .contact-form span {width:100%!important;}
   .captcha {margin-bottom:5px;}
   .content-container .content img.logo {position:relative; left:0;}
@@ -296,9 +297,11 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px;}
   .accommodation ul.amenities li:nth-child(8) {margin-right:10px;}
   .accommodation ul.amenities li {margin:0 5px 10px 5px;}
+  .blog_list {padding:0;}
   .blog_locations {margin-top:30px;}
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
-  .blog_show {padding:30px 0 0 0;}
+  .blog_show {padding:0;}
+  .blog_show .blog_show_container #comments .form-actions input {margin-bottom:35px}
   .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
   .bookings .personal, .bookings .passport, .bookings .flights, .bookings .insurance, .bookings .requests, .bookings .emergency, .bookings .acceptance {padding:15px 5px!important;}
   .bookings form .dont_get_newsletters_field label, .bookings form .certify_personal_insurance_field label, .bookings form .i_accept_field label {width:90%!important;}
@@ -328,6 +331,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .container {width: 970px;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:220px;}
+  .blog_list .blog_post .blog_post_pod {width:auto;}
   .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
 }
 
