--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,6 +153,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .content-container {height: 495px;}
   ul {text-align:center; width:100%; padding:0;
     li {display:inline-block; padding:0;
+      a {line-height:8px;}
       span {display:inline-block; width:55px; overflow:hidden;}
     }
   }
@@ -293,7 +294,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #locations ul { -webkit-column-count: 1;}
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
-  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
+  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px;}
   .accommodation ul.amenities li:nth-child(8) {margin-right:10px;}
   .blog_list {padding:0;}
