--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -264,12 +264,14 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .logo {position: absolute; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
   .navbar-hamburger {top:10px; right:10px;}
   nav ul {margin-top:50px;}
-  nav ul h2 {margin:0!important; padding:10px 0;}
-  nav ul a,nav ul h2 span {font-size:12px;}
+  nav ul h2 {margin:0!important; padding:5px 0;}
+  nav ul h2 a,nav ul h2 span {font-size:12px;}  
   nav ul li.parent ul { margin-top:0;}
   nav ul .location_nav {margin-left:0; text-align:center;}
-  nav ul .location_nav.open {height:auto;}
-  nav ul .location_nav li {float:none; width:100%;}
+  nav ul .location_nav li {line-height:24px;}
+  nav ul .location_nav img {display:none;}
+  nav ul .location_nav.open {height:auto;}  
+  nav ul .location_nav.open li a span { font-size: 11px;}
   .banner {position:relative;}
   .banner .banner-text {position: absolute; top:50%; margin-top:-40px; width:100%;}
   .banner .banner-text h2 {@include slider_font(); margin:0!important;}
@@ -295,9 +297,11 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
-  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px;}
-  .accommodation ul.amenities li:nth-child(8) {margin-right:10px;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px!important;}
   .blog_list {padding:0;}
+
+
+  
   .blog_locations {margin-top:30px;}
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
   .blog_show {padding:0;}
@@ -322,26 +326,22 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   p,form,#people .content-container .content h2, .street-child, .contact-form span, #welcome ul,.content-container .content h1 {width:100%!important;}
   #people .content-container .content .street-child {padding: 30px 0 0 0;}
   #people .content-container .content .street-child img {margin-right:13px;}
+  #countries h1 {margin:0 auto 35px auto;}
+  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:260px!important;}
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:546px!important;}
-.blog_list .blog_post .blog_post_pod {width:auto;}
-  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
-  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:260px;}
   .blog_locations img {display:none;}
-  .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
   .modal-dialog {width: 700px!important;}
   .modal-dialog .modal-content .modal-body {padding:0 40px 50px 40px!important;}
   .modal-dialog .modal-content .modal-body h1 {margin: 30px 0 50px 0;}
-  #countries h1 {margin:0 auto 35px auto;}
 }
 
 /*** md ***/
 
 @media (min-width:992px) and (max-width:1199px) {
   .container {width: 970px;}
-  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
-  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:220px;}
-  .blog_list .blog_post .blog_post_pod {width:auto;}
-  .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
+  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:220px!important;}
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:926px!important;}
 }
 
