--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -253,7 +253,7 @@
           <div class="accommodations">
             <div class="row">
               <div class="col-xs-12">
-                <h2>Camps / Lodges</h2>
+                <h2 id="camps">Camps / Lodges</h2>
                 <div id="accommodations_slider">
                   <% accommodations.each do |accommodation| %>
                     <div class="slide">
