--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,6 +202,20 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
+.monthbar { width:100%; height:20px; border-radius:10px; overflow:hidden; }
+.month { float:left; width:8.33%; line-height:20px; font-family:roboto; font-size:10px; text-align:center; color: #58595b; }
+.low { background:#b6c274; }
+.mid { background:#ffd351; }
+.high { background:#fca938; }
+.clear { clear:both; }
+.prices {width: 100%; Padding-top: 30px; text-align: center; font-family:roboto; font-size: 15px; color: #58595b; margin-bottom: 60px;}
+.price-low {width: 33.33333%; float: left; text-align: right}
+.price-low img {vertical-align: middle;}
+.price-mid {width: 33.33333%; float: left;}
+.price-mid img {vertical-align: middle;}
+.price-high {width: 33.3333%; float: left; text-align: left}
+.price-high img {vertical-align: middle;}
+
 /*** BLOG ***/
 
 .blog_list {background:#F4F4F4; padding:20px 0 70px 0;
