--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -7,7 +7,7 @@
 
   <% if menu_branch.url.include? '/locations' %>
     <h2><span  class="location_btn">Locations</span></h2>
-    <% @menu_locations = Refinery::Locations::Location.where('parent_id IS null') %>
+    <% @menu_locations = Refinery::Locations::Location.order("position ASC").where('parent_id IS null') %>
     <% if @menu_locations.present? %>
       <ul class="location_nav">
         <% @menu_locations.each do |location| %>
