--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -57,7 +57,7 @@
 
           </div>
           <div class="col-xs-12">
-            <% if @accommodation.amenities.present? %>
+            <% if @accommodation.amenities.uniq.present? %>
               <h2 class="amenities">Facilities</h2>
               <ul class="amenities">
                 <% @accommodation.amenities.each do |amenity| %>
@@ -69,7 +69,7 @@
                 <% end %>
               </ul>
             <% end %>
-            <% if @accommodation.activities.present? %>
+            <% if @accommodation.activities.uniq.present? %>
                 <h2 class="activities">Activities</h2>
                 <ul class="amenities">
                   <% @accommodation.activities.each do |activity| %>
